Migracja na SDL2. Tworzenie okna zamiast powierzchni - problemy z formatem surface, załatwione zmianą na sztywno (ARGB). Lekkie poprawki kosmetyczne w renderingu tilesów.
--HG--
branch : New CPU module

--- a/AnotherNES.vcproj
+++ b/AnotherNES.vcproj
@@ -58,7 +58,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="sdl.lib"
+				AdditionalDependencies="sdl2.lib"
 				GenerateDebugInformation="true"
 				EntryPointSymbol="main"
 				TargetMachine="1"
