PPU.cpp - Poprawiono VBLANK - był ustawiany tylko gdy było włączone NMI -   niektóre gry niestartowały, bo czekały na VBLANK, ale wyłączały NMI :)
main.cpp
- CPU_RAM.h: Prosta obsługa pada - działa, ale w brzydki sposób podaje dane
- Frameskip

CPU.h
- Dodanie brakujących instrukcji dla adersowania Indirect_indexed -
  nie mam pojęcia, dlaczego miały błąd w opcodzie (takie same jak
  dla Indexed_indirect) - ORA, AND, EOR, ADC, SBC

CPU.cpp
- Poprawki zgodnie z porównywaniem loga sprawnego emulatora:
 * Poprawne ustawianie flag procesora przy zrzucaniu ze stosu i przerwania
 * Naprawiono ADC i SBC, zgodnie z tym, jak to robi VICE
 * Poprawa wszystkich typów adresowania, aczkolwiek nie mam pewności, że
   działają sprawnie
 * Poprawa SP i flag przy starcie CPU - wg wiki nesdev


Efekt: Wiele romów się wczytuje (można robić unit testy, nie wszystkie
przechodzą, w nestest.nes (Indirect), y tests crashują cpu
a logi z sprawnym emu zgadzają się w 1/3, dalej crash.
Można grać w kilka gier, jak galaxianki i battle city, ale brak obsługi spritów,
pozatym jesteśmy na dobrej drodze.

--HG--
branch : New CPU module

--- a/AnotherNES.vcproj
+++ b/AnotherNES.vcproj
@@ -110,7 +110,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
+				Optimization="3"
 				EnableIntrinsicFunctions="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -128,7 +128,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="sdl.lib"
+				AdditionalDependencies="sdl2.lib"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
