Rozdzieliłem moduł CPU na CPU i CPU_interpreter - pozwoli to w przyszłości łatwo napisać rekompilator.
Dodano obsługę kilku mapperów, niekoniecznie musi działać dobrze, ale
można testować emulator na większej ilości gier.

Poprawka OAMDMA, jednak nie mam pewności, czy działa idealnie.

Potrzeba przepisania renderera na nowo - niektóre gry po prostu nie zadziałają
z obecnym - scrollowanie w czasie renderingu nie ma żadnego efektu, bo takie
zmiany nie są uwzględniane. Dodatkowo trzeba usprawnić rendering spritów -
obecnie flagi sprita nie są uwzględniane (front/back).

Dodano okienko wyboru roma - brak potrzeby rekompilacji w przypadku zmiany
ścieżki!
Wczytywanie całego roma, a nie tylko 2 stron.

--HG--
branch : New CPU module

--- a/AnotherNES.vcproj
+++ b/AnotherNES.vcproj
@@ -170,6 +170,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\CPU_interpreter.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\CPU_ram.cpp"
 				>
 			</File>
@@ -193,6 +197,10 @@
 			>
 			<File
 				RelativePath=".\src\CPU.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\CPU_interpreter.h"
 				>
 			</File>
 			<File
