--- a/AnotherNES.vcproj
+++ b/AnotherNES.vcproj
@@ -58,7 +58,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="sdl2.lib"
+				AdditionalDependencies="sdl2.lib xinput.lib"
 				GenerateDebugInformation="true"
 				EntryPointSymbol="main"
 				TargetMachine="1"
@@ -128,7 +128,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="sdl2.lib"
+				AdditionalDependencies="sdl2.lib xinput.lib"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
