--- a/AnotherNES.vcproj
+++ b/AnotherNES.vcproj
@@ -224,6 +224,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\resource.h"
+				>
+			</File>
+			<File
 				RelativePath=".\src\stdint.h"
 				>
 			</File>
@@ -233,6 +237,10 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath=".\src\resource.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
