--- a/AnotherNES.vcxproj.filters
+++ b/AnotherNES.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\Dialog\DlgPalette.cpp">
       <Filter>Source Files\Dialog</Filter>
     </ClCompile>
+    <ClCompile Include="src\Dialog\DlgRAM.cpp">
+      <Filter>Source Files\Dialog</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\APU.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files\Dialog</Filter>
     </ClInclude>
     <ClInclude Include="src\Dialog\DlgPalette.h">
+      <Filter>Header Files\Dialog</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Dialog\DlgRAM.h">
       <Filter>Header Files\Dialog</Filter>
     </ClInclude>
   </ItemGroup>
