--- a/src/resource.rc
+++ b/src/resource.rc
@@ -51,7 +51,8 @@ RES_MENU MENU
         {
             MENUITEM "OAM", DEBUG_WINDOWS_OAM
             MENUITEM "Palette", DEBUG_WINDOWS_PALETTE
-            MENUITEM "Nametable", DEBUG_WINDOWS_NAMETABLE
+			MENUITEM "Nametable", DEBUG_WINDOWS_NAMETABLE
+			MENUITEM "RAM", DEBUG_WINDOWS_RAM
         }
     }
     POPUP "Help"
