- Czyszczenie kodu - Usuwanie warningów - Zmiana ustawień (Entrypoint zamiast main ustawiony na pusty) poprawiła starego   buga, który nie zamykał programu przy zamknięciu okna.

--- a/AnotherNES.vcxproj
+++ b/AnotherNES.vcxproj
@@ -64,8 +64,10 @@
     <Link>
       <AdditionalDependencies>sdl2.lib;XInput9_1_0.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <EntryPointSymbol>main</EntryPointSymbol>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
       <TargetMachine>MachineX86</TargetMachine>
+      <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
