--- a/src/resource.rc
+++ b/src/resource.rc
@@ -86,4 +86,4 @@ FONT 8, "Ms Shell Dlg"
 // Icon resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-RES_ICON           ICON           "..\\icon.ico"
+RES_ICON_SMALL     ICON           "..\\icon.ico"
