--- a/AnotherNES.vcxproj
+++ b/AnotherNES.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="src\CPU.cpp" />
     <ClCompile Include="src\CPU_interpreter.cpp" />
     <ClCompile Include="src\CPU_ram.cpp" />
+    <ClCompile Include="src\Dialog\DlgPatterntable.cpp" />
     <ClCompile Include="src\Dialog\DlgRAM.cpp" />
     <ClCompile Include="src\iNES.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -107,6 +108,7 @@
     <ClInclude Include="src\CPU.h" />
     <ClInclude Include="src\CPU_interpreter.h" />
     <ClInclude Include="src\CPU_ram.h" />
+    <ClInclude Include="src\Dialog\DlgPatterntable.h" />
     <ClInclude Include="src\Dialog\DlgRAM.h" />
     <ClInclude Include="src\headers.h" />
     <ClInclude Include="src\iNES.h" />
