--- a/src/resource.rc
+++ b/src/resource.rc
@@ -52,6 +52,7 @@ RES_MENU MENU
             MENUITEM "OAM", DEBUG_WINDOWS_OAM
             MENUITEM "Palette", DEBUG_WINDOWS_PALETTE
 			MENUITEM "Nametable", DEBUG_WINDOWS_NAMETABLE
+            MENUITEM "Patterntable", DEBUG_WINDOWS_PATTERNTABLE
 			MENUITEM "RAM", DEBUG_WINDOWS_RAM
         }
     }
