MMC3 moved, CPU_ram cleaned - still instead of pointers I should use references.

--- a/AnotherNES.vcxproj
+++ b/AnotherNES.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="src\Mapper\Mapper1.cpp" />
     <ClCompile Include="src\Mapper\Mapper2.cpp" />
     <ClCompile Include="src\Mapper\Mapper3.cpp" />
+    <ClCompile Include="src\Mapper\Mapper4.cpp" />
     <ClCompile Include="src\Mapper\Mapper71.cpp" />
     <ClCompile Include="src\NSF.cpp" />
     <ClCompile Include="src\Dialog\DlgAbout.cpp" />
@@ -125,6 +126,7 @@
     <ClInclude Include="src\Mapper\Mapper1.h" />
     <ClInclude Include="src\Mapper\Mapper2.h" />
     <ClInclude Include="src\Mapper\Mapper3.h" />
+    <ClInclude Include="src\Mapper\Mapper4.h" />
     <ClInclude Include="src\Mapper\Mapper71.h" />
     <ClInclude Include="src\NSF.h" />
     <ClInclude Include="src\PPU.h" />
