--- a/AnotherNES.vcxproj.filters
+++ b/AnotherNES.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="src\Mapper\Mapper1.cpp">
       <Filter>Source Files\Mapper</Filter>
     </ClCompile>
+    <ClCompile Include="src\Mapper\Mapper4.cpp">
+      <Filter>Source Files\Mapper</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\APU.h">
@@ -159,6 +162,9 @@
       <Filter>Header Files\Mapper</Filter>
     </ClInclude>
     <ClInclude Include="src\Mapper\Mapper1.h">
+      <Filter>Header Files\Mapper</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Mapper\Mapper4.h">
       <Filter>Header Files\Mapper</Filter>
     </ClInclude>
   </ItemGroup>
