--- a/src/resource.rc
+++ b/src/resource.rc
@@ -54,6 +54,7 @@ RES_MENU MENU
 			MENUITEM "Nametable", DEBUG_WINDOWS_NAMETABLE
             MENUITEM "Patterntable", DEBUG_WINDOWS_PATTERNTABLE
 			MENUITEM "RAM", DEBUG_WINDOWS_RAM
+            MENUITEM "CPU", DEBUG_WINDOWS_CPU
         }
     }
     POPUP "Help"
